--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <script src="https://staykay-reviews.s3-us-west-1.amazonaws.com/style.css"></script>
     <title>StayKay Reviews</title>
   </head>
   <body>
     <div id="reviews-here"></div>
-    <script src="./dist/bundle.js"></script>
+    <script src="https://staykay-reviews.s3-us-west-1.amazonaws.com/bundle.js"></script>
   </body>
 </html>
