--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="reviews-here"></div>
     <script src="https://staykay-reviews.s3-us-west-1.amazonaws.com/bundle.js"></script>
+    <!-- <script src="dist/bundle.js"></script> -->
   </body>
 </html>
